common-applications/test-environment/gitea-repo-sh/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: gitea-repo 
  name: gitea-repo
