common-applications/test-environment/gitea-repo-sh/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx    
    nginx.ingress.kubernetes.io/proxy-body-size: 10G
  name: gitea-repo-ingress
  namespace: gitea-repo
spec:
  tls:
    - hosts:
      - giteash.test.osinfra.cn
      secretName: gitea-repo-lts
  rules:
    - host: giteash.test.osinfra.cn
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: gitea-repo
              port:
                number: 3000
